tests/test_assets/semantic/invalid/mutation/statement_only_conditions.cog
test::() -> void {
    x: i32 = 0;

    if x = 1 {
    }
}