tests/test_assets/semantic/invalid/mutation/statement_only_conditions.expected
semantic error at line 4: assignment cannot be used as a value; it is a statement
1 semantic error generated.
